# kuavo-ros-opensource

./: .gitignore  CHANGELOG.md  readme.md
docker/: readme.md  run_with_gpu.sh
docs/: sidebars.js  运动控制API.md
docs/4开发接口/: 仿真环境使用.md  接口使用文档.md
docs/5功能案例/: 案例目录.md
docs/5功能案例/综合案例/: 策略模块搬箱子案例.md
docs/5功能案例/通用案例/: H12遥控器使用开发案例.md  基于人脸识别的简易语音交互案例.md  大模型联网搜索与视觉推理案例.md  强化学习案例.md  接入deepseek大模型语音交互案例.md  接入豆包实时语音大模型案例.md
installed/: hardware_lib_setup.sh
installed/include/dexhand_sdk/: dexhand_base.h  modbus.h  protobuf_dexhand.h  touch_dexhand.h
installed/include/hardware_plant/: ankle_solver.h  hardware_plant.h  motor_status_manager.h  revo2_hand_controller.h  touch_hand_controller.h
installed/include/humanoid_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
installed/include/humanoid_interface/: HumanoidInterface.h  HumanoidPreComputation.h
installed/include/humanoid_wbc/: WbcBase.h
installed/include/ruiwo_controller/: ruiwo_actuator.h
installed/lib/: libserialport.so.0
installed/share/hardware_node/: package.xml
installed/tests/: hardware_plant_test.cpp
scripts/joint_cali/: head_cali.py
scripts/joint_cali/launch/: cali_real.launch
src/: hardware_s1_joint_high_frequency_test_pos.py
src/data_challenge_simulator/: CMakeLists.txt  package.xml  readme.md
src/data_challenge_simulator/examples/: automation.py  launch.py  task1.py  task2.py  task3.py  task4.py
src/humanoid-control/mobile_manipulator_controllers/test/: CMakeLists.txt  kinematicMpcTest.cpp  mobileManipulatorControllerBaseTest.cpp  mobileManipulatorControllerBaseTrackingTest.cpp  mobileManipulatorControllerBaseUnitTest.cpp
src/kuavo_arm_collision_check/: readme.md
src/kuavo_humanoid_sdk/: .gitignore  README_zh_cn.md  install.sh
src/kuavo_led/: Readme.md
src/kuavo_msgs/: CMakeLists.txt  format_msgs.py
src/mujoco/: CMakeLists.txt
tools/: setup-kuavo-ros-control.sh
tools/bag_tools/: current_to_torque_converter.py
tools/check_tool/: Hardware_tool.py  dexhand_test.sh  gen_dexhand_serial_rules.sh
tools/extract_camera_pose/: howto-kuavo-pose-calculator.md  kuavo_pose_calculator.py
tools/upload_log/: install_log_uploader.sh
(+309 files in other folders)
